--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "#@base": "./ncore/base/base.js",
     "#@baseTool": "./ncore/base/utils/base_tools.js",
     "#@globalvars": "./ncore/globalvars.js",
+    "#@bdir": "./ncore/gvar/bdir.js", 
     "#@db": "./ncore/db.js",
     "#@utils": "./ncore/utils.js",
     "#@utils_linux": "./ncore/utils_linux.js",
     "#@utils_native": "./ncore/utils_native.js",
+    "#@utils_logger": "./ncore/utils/logger/index.js",
+    "#@utils_commander": "./ncore/utils/basic/commander.js",
+    "#@utils_downloader": "./ncore/utils/net/libs/downloader.js",
     "#@practicals": "./ncore/practicals.js",
     "#@practicals_linux": "./ncore/practicals_linux.js",
     "#@app_service/*": "./ncore/apps/${name}/service/*",
