--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
   "description": "ncore is a collection of core modules for Electron application development. This module set provides foundational infrastructure and common functionalities, including plugin management, logging, and core feature extensions. By using ncore, developers can efficiently build and manage complex Electron applications, enhancing maintainability and scalability throughout the development process.",
   "main": "main.js",
   "scripts": {
-    "ee-build-dev": "npm run babel-build && node ./.ncore/ncore/plugin/egg/ee-bin/index.js dev",
-    "ee-b-e-dev": "npm run babel-build && electron ./.ncore/ncore/plugin/egg/ee-init/index.js",
     "dev-electron": "electron ./main.js",
     "dev": "nodemon ./main.js app=VoiceStaticServer",
     "build-dev": "npm run babel-build && electron ./main.js",
-    "reload": "nodemon --config ./ncore/plugin/egg/config/nodemon.json",
+    "reload": "nodemon --config ./nodemon.json",
+    "app-reload": "nodemon --config ./nodemon.json",
     "dev-babel": "npx babel-node ./ncore/plugin/egg/ee-bin/index.js dev",
     "dev-frontend": "npx babel-node ./ncore/plugin/egg/ee-bin/index.js dev --serve=frontend",
     "dev-electron-": "npx babel-node ./ncore/plugin/egg/ee-bin/index.js dev --serve=electron",
@@ -76,7 +75,6 @@
   "author": "ncore is a collection of core modules for Electron application development. This module set provides foundational infrastructure and common functionalities, including plugin management, logging, and core feature extensions. By using ncore, developers can efficiently build and manage complex Electron applications, enhancing maintainability and scalability throughout the development process.",
   "license": "Apache",
   "devDependencies": {
-    "@eggjs/tsconfig": "^1.0.0",
     "@electron/rebuild": "^3.6.0",
     "@types/commander": "^2.12.2",
     "@types/del": "^3.0.0",
@@ -172,7 +170,6 @@
     "lodash": "^4.17.21",
     "merge-descriptors": "^2.0.0",
     "methods": "^1.1.2",
-    "microsoft-cognitiveservices-speech-sdk": "^1.40.0",
     "mkdirp": "^3.0.1",
     "mm": "^3.4.0",
     "mysql2": "^3.11.0",
