--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "#@egg/*": "./ncore/plugin/egg/*",
     "#@base": "./ncore/base/base.js",
     "#@baseTool": "./ncore/base/utils/base_tools.js",
+    "#@gvars": "./ncore/globalvars.js",
     "#@globalvars": "./ncore/globalvars.js",
     "#@bdir": "./ncore/gvar/bdir.js",
     "#@gconfig": "./ncore/gvar/gconfig.js",
@@ -161,12 +162,6 @@
     "is-type-of": "^2.1.0",
     "javascript-obfuscator": "^4.1.1",
     "json5": "^2.2.3",
-    "ko-sleep": "^1.1.4",
-    "koa": "^2.15.3",
-    "koa-body": "^6.0.1",
-    "koa-convert": "^2.0.0",
-    "koa-static": "^5.0.0",
-    "koa2-cors": "^2.0.6",
     "lodash": "^4.17.21",
     "merge-descriptors": "^2.0.0",
     "methods": "^1.1.2",
@@ -189,6 +184,7 @@
     "regedit": "^5.1.3",
     "rimraf": "^5.0.10",
     "semver": "^7.6.3",
+    "sequelize": "^6.37.5",
     "serialize-javascript": "^6.0.2",
     "serve-handler": "^6.1.5",
     "shortid": "^2.2.16",
