--- a/apps/VoiceStaticServer/.env
+++ b/apps/VoiceStaticServer/.env
@@ -3,3 +3,5 @@ HTTP_HOST=0.0.0.0
 API_KEY=VWluSVKRwH3LR1i/bEO4xCUQ1h9NNR5O
 
 SERVER_URL=http://43.159.58.199:15452
+SERVER_SUB_1_URL=http://47.107.84.210:15452
+# SERVER_SUB_2_URL=http://47.107.84.210:15452
