--- a/package.json
+++ b/package.json
@@ -5,27 +5,13 @@
   "imports": {
     "#@/*": "./*",
     "#@ncore/*": "./ncore/*",
-    "#@utils_refer": "./ncore/utils/*",
-    "#@plugins/*": "./ncore/plugin/*",
     "#@apps/*": "./apps/*",
-    "#@egg/*": "./ncore/plugin/egg/*",
-    "#@base": "./ncore/base/base.js",
-    "#@baseTool": "./ncore/base/utils/base_tools.js",
     "#@gvars": "./ncore/globalvars.js",
     "#@globalvars": "./ncore/globalvars.js",
     "#@bdir": "./ncore/gvar/bdir.js",
     "#@gconfig": "./ncore/gvar/gconfig.js",
-    "#@db": "./ncore/db.js",
-    "#@utils": "./ncore/utils.js",
-    "#@utils_linux": "./ncore/utils_linux.js",
-    "#@utils_native": "./ncore/utils_native.js",
-    "#@utils_logger": "./ncore/utils/logger/index.js",
-    "#@utils_commander": "./ncore/utils/basic/commander.js",
-    "#@utils_downloader": "./ncore/utils/net/libs/downloader.js",
-    "#@practicals": "./ncore/practicals.js",
-    "#@practicals_linux": "./ncore/practicals_linux.js",
-    "#@app_service/*": "./ncore/apps/${name}/service/*",
-    "#@app_control/*": "./ncore/apps/${name}/controller/*"
+    "#@logger": "./ncore/gvar/basic/logger.js",
+    "#@commander": "./ncore/gvar/basic/commander.js"
   },
   "private": true,
   "description": "ncore is a collection of core modules for Electron application development. This module set provides foundational infrastructure and common functionalities, including plugin management, logging, and core feature extensions. By using ncore, developers can efficiently build and manage complex Electron applications, enhancing maintainability and scalability throughout the development process.",
